# Kleavox-monorepo

./: .cpanel.yml  .gitignore  .npmrc  .prettierignore  CONTEXT.md  Cargo.toml  README.md  contact.html  deauwait.service  gallery.html  go.sum  go.work  index.html  install.sh  knip.json  next.config.ts  nuxt.config.ts  package-lock.json  package.json  panda.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  profile.html  proxy.ts  schema.sql  scripts.js  styles.css  tailwind.config.js  tailwind.config.ts  tsconfig.base.json  tsconfig.json  tsconfig.tooling.json  turbo.json  wrangler.jsonc  wrangler.toml
.github/workflows/: Deploy.yml  agent-release.yml  agent.yml  ci.yml  deploy.yml
app/: app.vue  globals.css  layout.tsx  not-found.tsx  page.tsx
app/[slug]/: page.tsx
app/account-deleted/: page.tsx
app/admin/: page.tsx
app/components/: BackgroundParticles.vue  WatcherCard.vue
app/dash/: page.tsx
app/forgot-password/: page.tsx
app/login/: page.tsx
app/pages/: index.vue
app/privacy/: page.tsx
app/report/: page.tsx
app/reset-password/: page.tsx
app/setup/: page.tsx
app/terms/: page.tsx
app/verify/: page.tsx
apps/drop/: index.html  package.json
apps/link/: .env.example  index.html  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
apps/pass/: .env.example  index.html  package.json  tsconfig.json
apps/portfolio/: .env.example  astro.config.mjs  package.json  tsconfig.json
apps/pulse/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/: .env.example  astro.config.mjs  index.html  package.json  privacy.html  terms.html  tsconfig.json  vite.config.ts
cmd/agent/: main.go
components/: AnalyticsModal.tsx  AppShell.tsx  ChallengeModal.tsx  DeauBitLogo.tsx  EditShortlinkModal.tsx  ExistingShortlinksCard.tsx  FileUploader.tsx  GlobalSecurityGate.tsx  LoginForm.tsx  PageWrapperClient.tsx  PasswordGuard.tsx  PublicShortlinkForm.tsx  QrCodeModal.tsx  RegisterForm.tsx  ShortlinkResultModal.tsx  ThemeToggle.tsx  VerifyForm.tsx  WatcherCard.vue
crates/: README.md
crates/agent/: Cargo.toml
crates/agent/src/: checker.rs  config.rs  discovery.rs  main.rs  metrics.rs  reporter.rs  setup.rs
crates/compression/: Cargo.toml
crates/compression/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/shared/: Cargo.toml
crates/web/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
crates/web/src/: main.rs
crates/web/src/components/: header.rs  mod.rs  youtube.rs
crates/web/src/pages/: dashboard.rs  mod.rs
crates/web/src/pages/dashboard/: mod.rs
crates/web/styles/: tailwind.css
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs
crates/worker/src/routes/: auth.rs  mod.rs
crates/worker/src/routes/nodes/: mod.rs
crates/worker/src/routes/notes/: mod.rs
crates/worker/src/routes/projects/: mod.rs
crates/worker/src/routes/uptime/: mod.rs
crates/worker/src/routes/youtube/: mod.rs
docs/: architecture.md  domains.md  drop.md  git-history.md  github.md  link.md  migration.md  pass.md  production.md  pulse.md  roadmap.md
gfl/: HP.html  High Priority.html  Index.html  LP.html  Low Priority.html  MARSMG.html  MP.html  Med AR SMG.html  Medium Priority.html  MinP.html  Minimal Priority.html  NP.html  NPP.html  New Player Priority.html  NgP.html  Night Priority.html  No Priority.html  Set(NoMOD).html  SetNM.html
gfl/resources/: app.py  overlay.py
go/: go.mod  main.go
go/auth/: hash.go  jwt.go  otp.go
internal/database/: postgres.go
internal/redisclient/: redis.go
legacy/Kronyx/: go.mod
legacy/deauboard-tanstack/: .cta.json  package-lock.json
legacy/deauport-dashboard/: package.json  pnpm-lock.yaml
legacy/deauport-services/: .gitignore
legacy/vps-dashboard/: package-lock.json  package.json
lib/: auth.ts  cos.ts  loginRateLimit.ts  mail.ts  prisma.ts  rateLimit.ts  redis.ts  session.ts
migrations/: 0001_init.sql  0002_uuid_ids.sql  0003_sessions.sql  0004_uptime.sql  0005_fix_uptime_schema.sql  schema.sql
pages/: index.vue
pages/wait/: [watchId].vue
prisma/: dev.db  schema.prisma  seed.ts
public/: index.html  robots.txt
scripts/: build.sh
server/api/: report-live.post.ts  watch.post.ts
server/utils/: checkLive.ts  watcherStore.ts
services/agent/: README.md  config.example.json  go.mod  install.sh
src/: app.ts  index.js  index.ts  oauth.ts  server.ts  wasm.ts
src/api/: index.ts
src/components/: About.astro  Contact.tsx  ContactSection.astro  Footer.astro  Hero.astro  Nav.astro  Projects.astro  Skills.astro
src/layouts/: Layout.astro
src/lib/: mailer.ts  pinger.ts  prisma.ts
src/pages/: 404.astro  index.astro
src/routes/: recap.ts  shortlinks.ts  (+1 more)
worker/: wrangler.toml.example
(+302 files in other folders)
