[workspace]
members = ["crates/compression", "crates/crypto"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
aes-gcm = { version = "0.10", features = ["stream"] }
argon2 = "0.5"
flate2 = { version = "1.1.2", default-features = false, features = ["rust_backend"] }
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["getrandom"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
