[workspace]
members = ["crates/compression", "crates/crypto"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
aead-stream = { version = "0.6", features = ["alloc"] }
aes-gcm = { version = "0.11", default-features = false, features = ["aes", "alloc"] }
argon2 = "0.5"
flate2 = { version = "1.1.2", default-features = false, features = ["rust_backend"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
