[package]
name = "kleavox-compression"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
flate2 = { version = "1.1.2", default-features = false, features = ["rust_backend"] }
wasm-bindgen = "0.2.100"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
