[package]
name = "kleavox-crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
argon2 = "0.5"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
aes-gcm = { version = "0.10", features = ["stream"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
