[package]
name = "deauboard-web"
version = "0.1.1"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
deauboard-shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
gloo-net = { version = "0.6", features = ["http"] }
gloo-storage = "0.3"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
