[package]
name = "deauboard-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ["d1"] }
deauboard-shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
uuid = { version = "1", features = ["v4", "js"] }
